This should fix compilation on OSX (bug #68987 Failed to compile zend.c with gcc-4.9.2)