Zend/zend.c
@@ -1199,9 +1199,10 @@ static void zend_error_va_list(int type, const char *format, va_list args)
 }
 /* }}} */
 
-#if (defined(__GNUC__) && __GNUC__ >= 3 && !defined(__INTEL_COMPILER) && !defined(DARWIN) && !defined(__hpux) && !defined(_AIX) && !defined(__osf__))
+#ifdef HAVE_NORETURN
+# ifdef HAVE_NORETURN_ALIAS
 void zend_error_noreturn(int type, const char *format, ...) __attribute__ ((alias("zend_error"),noreturn));
-#elif defined(ZEND_WIN32) || defined(DARWIN)
+# else
 ZEND_API void zend_error(int type, const char *format, ...) /* {{{ */
 {
 	va_list va;
@@ -1220,6 +1221,7 @@ ZEND_API ZEND_NORETURN void zend_error_noreturn(int type, const char *format, ..
 	va_end(va);
 }
 /* }}} */
+# endif
 #endif
 
 ZEND_API void zend_output_debug_string(zend_bool trigger_break, const char *format, ...) /* {{{ */
